--- a/softether/templates/ingress.yaml
+++ b/softether/templates/ingress.yaml
@@ -1,6 +1,6 @@
 {{- if .Values.ingress.enabled -}}
 {{- $fullName := include "softether.fullname" . -}}
-{{- $svcPort := .Values.service.web.port -}}
+{{- $svcPort := .Values.service.softether.port -}}
 {{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
 apiVersion: networking.k8s.io/v1beta1
 {{- else -}}
