--- a/softether/templates/service.yaml
+++ b/softether/templates/service.yaml
@@ -4,44 +4,22 @@ metadata:
   name: {{ include "softether.fullname" . }}
   labels:
     {{- include "softether.labels" . | nindent 4 }}
-{{- if .Values.service.softether.annotations }}
+{{- if .Values.service.annotations }}
   annotations:
-    {{ toYaml .Values.service.softether.annotations | nindent 4 }}
+    {{ toYaml .Values.service.annotations | nindent 4 }}
 {{- end }}
 spec:
-  type: {{ .Values.service.softether.type }}
-{{- if .Values.service.softether.externalIPs }}
+  type: {{ .Values.service.type }}
+{{- if .Values.service.externalIPs }}
   externalIPs:
-    {{ toYaml .Values.service.softether.externalIPs | nindent 4 }}
+    {{ toYaml .Values.service.externalIPs | nindent 4 }}
 {{- end }}
   ports:
     - name: softether
       targetPort: softether
-      port: {{ .Values.service.softether.port }}
+      port: {{ .Values.service.port }}
       protocol: TCP
-  selector:
-    {{- include "softether.selectorLabels" . | nindent 4 }}
-
-
----
-{{- if and .Values.service.l2tp }}
-apiVersion: v1
-kind: Service
-metadata:
-  name: {{ include "softether.fullname" . }}-l2tp
-  labels:
-    {{- include "softether.labels" . | nindent 4 }}
-{{- if .Values.service.l2tp.annotations }}
-  annotations:
-    {{ toYaml .Values.service.l2tp.annotations | nindent 4 }}
-{{- end }}
-spec:
-  type: {{ .Values.service.l2tp.type }}
-{{- if .Values.service.l2tp.externalIPs }}
-  externalIPs:
-    {{ toYaml .Values.service.l2tp.externalIPs | nindent 4 }}
-{{- end }}
-  ports:
+    {{- if and .Values.service.l2tp.enabled }}
     - name: ike
       targetPort: ike
       port: 500
@@ -50,6 +28,6 @@ spec:
       targetPort: ipsec
       port: 4500
       protocol: UDP
+    {{- end }}
   selector:
     {{- include "softether.selectorLabels" . | nindent 4 }}
-{{- end }}
