--- a/softether/Chart.yaml
+++ b/softether/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 
 version: 0.1.10
-appVersion: 5.01.9674
+appVersion: 9745-alpine
 
 name: softether
 description: SoftEther VPN Server
