--- a/softether/templates/deployment.yaml
+++ b/softether/templates/deployment.yaml
@@ -54,18 +54,16 @@ spec:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
             - mountPath: /usr/vpnserver/vpn_server.config
+              subPath: vpn_server.config
               name: config
           securityContext:
             capabilities:
               add: ["NET_ADMIN"]              
       volumes:
       - name: config
-      {{- if .Values.persistence.config.enabled }}
-        persistentVolumeClaim:
-          claimName: {{ .Values.persistence.config.existingClaim | default (printf "%s-%s" (include "softether.fullname" .) "config") }}
-      {{- else }}
-        emptyDir: {}
-      {{- end }}
+        configMap:
+          name: {{ include "softether.fullname" . }}-config
+          defaultMode: 0777
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
